# programacionDistribuida

./: pasos.txt  pyproject.toml
contas/: 0000000000.json  1111111111.json  2222222222.json  3333333333.json  4444444444.json  5555555555.json  6666666666.json  7777777777.json  8888888888.json  9999999999.json
pixson/: cliente.py  servidor.py
pixson/recursos/: conta.py  enums.py  protocolo.py  utils.py
